[project]
name = "haps-nested-cv"
version = "0.1.0"
description = "Nested CV evaluation of H&E-IHC image-similarity metrics"
readme = "README.md"
requires-python = ">=3.10,<3.11"

# ВНИМАНИЕ: целевая ОС — CentOS 7.9 (glibc 2.17). Версии ограничены сверху так,
# чтобы существовали manylinux2014-колёса (свежие релизы публикуют только
# manylinux_2_28 и не ставятся на glibc 2.17).
dependencies = [
    "numpy>=1.24,<1.27",
    "scipy>=1.10,<1.13",
    "pandas>=2.0,<2.3",
    "scikit-learn>=1.3,<1.5",
    "scikit-image>=0.21,<0.23",
    "opencv-python-headless>=4.8,<4.11",
    "Pillow>=9.5,<10.4",
    "tqdm>=4.65",
    "matplotlib>=3.7,<3.9",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "piq>=0.8",
    "lpips>=0.1.4",
    "DISTS-pytorch>=0.1",
    "cellpose>=2.2,<3.0",
    "gdown>=4.7",
    # Транзитивные зависимости с обрезанным набором manylinux2014-колёс (glibc 2.17):
    "fastremap<=1.17.4",
]

[project.optional-dependencies]
# TransPath (метрика `transpath`) ставится отдельно: код модели + patched timm
# + веса ctranspath.pth. См. scripts/setup_transpath.sh и AGENTS.md.

[tool.uv]
# torch/torchvision тянем из CUDA-индекса PyTorch (cu121).
# Для CPU-only окружения замените индекс на .../whl/cpu.
# glibc 2.17: запрещаем сборку из исходников, чтобы не собирать компилируемые
# пакеты древним gcc 4.8 — только manylinux2014-колёса.
no-build = true
# Проект — набор скриптов, не устанавливаемый пакет (запускается из репо напрямую).
package = false

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
